--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
   carousel_indicator: ^1.0.6
+  firebase_storage: ^11.2.1
+  cloud_firestore: ^4.7.1
 
 dev_dependencies:
   flutter_test:
